_includes/academy.css
/* ... */
.calculator .row {
    display: table-row-group;
}
.calculator .column {
    display: table-cell;
    padding: .4em;
}
.calculator .label {
    font-weight: bold;
    white-space: nowrap;
}
.calculator input {
    direction: ltr;
    width: 5em;
    text-align: left;
}
.calculator button {
    width: 12em;
    margin-top: .55em;
}

.sat form {
    overflow: hidden;
}
.sat h4 {
    font-size: 130%;
    margin-bottom: 0;
}
.sat i {
    margin: .2em;
}
.sat .wrap {
    white-space: normal;
}
.sat.sat input:checked ~ label {
    z-index: 1;
    background-color: #fff;
    box-shadow: 0 -1px 0 #eee, 0 2px 0 #aaa;
}
.sat .label,
.sat .label[disabled][disabled] {
    border-color: #ddd;
}
.sat .wrapper {
    display: inline-block;
    width: 100%;
    padding: 0;
    margin: 0;
    white-space: nowrap;
    transition: transform .35s cubic-bezier(.2,1,.4,1);
    -webkit-transform: translateZ(0); /* Android 4.4.4 legacy */
        -ms-transform: translateZ(0); /* IE9 legacy */
            transform: translateX(0);
}
.sat .qa {
    display: inline-block;
    width: 100%;
    padding: 0;
    margin: 1em 0;
    vertical-align: top;
}
.sat .box .row {
    display: block;
    width: 100%;
    padding: 0;
    white-space: normal;
    box-sizing: border-box;
}
.sat .next {
        width: auto;
    min-width: 7em;
    height: auto;
    padding: .8em 1.2em;
    margin: 0;
    color: #fff;
    text-shadow: -1px -1px #000;
    background-color: #4d90fe;
    border-radius: 4px;
    box-shadow: none;
    outline: none;
}
.sat .back {
    display: inline-block;
    margin: .8em 1.2em;
    color: #aaa;
    font-weight: bold;
    cursor: pointer;
}
.sat .next.spin.spin.spin:before {
    margin-top: 0;
    margin-right: .5em;
    margin-left: -.1em;
}

@keyframes shake {
    0%, 100% {
        transform: translateX(0);
    }
    10% {
        transform: translateX(-9px);
    }
    20% {
        transform: translateX(8px);
    }
    30% {
        transform: translateX(-7px);
    }
    40% {
        transform: translateX(6px);
    }
    50% {
        transform: translateX(-5px);
    }
    60% {
        transform: translateX(4px);
    }
    70% {
        transform: translateX(-3px);
    }
    80% {
        transform: translateX(2px);
    }
    90% {
        transform: translateX(-1px);
    }
}

button[disabled] {
    animation-name: shake;
    animation-duration: .5s;
    animation-timing-function: ease-out;
    animation-fill-mode: both;
}
button[disabled].spin,
button[disabled]:not(:hover) {
    animation-name: none;
}

@media (max-width: 54em) {
    .stretch header .wrapper {
        min-width: 24.779em;
    }
    .logedin nav {
        padding-left: 3em;
        background-color: transparent;
    }
    nav a {
        display: inline-block;
    }
    .stretch .bar.bar {
        display: none;
    }
    .logedin .bar.bar {
        position: fixed;
    }
    .logo {
        margin-right: -.5em;
    }
    .stretch .logo {
        margin-right: 0;
    }
    .profile {
        padding-right: .5em;
    }
    .profile .nowrap {
        max-width: 3em;
    }
    .container {
        display: flex;
        flex-direction: column;
    }
    .column {
        padding: 0;
    }
    .nav-container,
    .comment-container {
        display: block;
        order: 2;
        width: auto;
        float: none;
    }
    .nav-container {
        top: 3.75em;
            width: 100vw;
        max-width: 24em;
        background-color: #fff;
    }
    .bar-holder:checked ~ main .container .nav-container {
        box-shadow: 0 0 4em rgba(51,51,51,.11),
                    0 0 27vw rgba(51,51,51,.3);
    }
}
@media (max-width: 33em) {
    .logedin nav a {
        visibility: hidden;
    }
}
@media (max-width: 28em) {
    .stretch nav a {
        padding: 1em;
    }
    .stretch header .wrapper {
        min-width: 18.5em;
    }
    .logo {
        width: 26px;
    }
}
@media (min-width:0\0) and (min-resolution: .001dpcm) { /* IE9 */
    .subscribe .spin:before {
        font-size: 25%;
    }
    button {
        margin-top: 1em;
    }
}
@media (-ms-high-contrast: active), (-ms-high-contrast: none) { /* IE10+ */
    .subscribe .spin:before {
        font-size: 25%;
    }
}

